Se agregan nuevos tests